# ApplicationDataObjectManagement

./: .gitignore  CMakeLists.txt  Doxyfile  adomConfig.cmake.in  build.sh  install_boost.sh  readme.md  uninstall.sh
cmake/: README.md
examples/ros2/simpleROS2Application/: readme.md
examples/ros2/simpleROS2Application/src/application_data_object_management_msgs/: CMakeLists.txt  package.xml
examples/ros2/simpleROS2Application/src/application_data_object_management_msgs/msg/: ObjectStructure.msg  VirtualObject.msg
examples/ros2/simpleROS2Application/src/autoware_msgs/tier4_perception_msgs/: CMakeLists.txt  package.xml
examples/ros2/simpleROS2Application/src/bag_replay/bag_reader_cpp/: CMakeLists.txt  package.xml
examples/ros2/simpleROS2Application/src/bag_replay/bag_reader_cpp/src/: image_bag_reader.cpp  image_bag_reader_adom.cpp  roi_bag_reader.cpp
examples/ros2/simpleROS2Application/src/launcher/: CMakeLists.txt  package.xml
examples/ros2/simpleROS2Application/src/launcher/launch/: simple_roi_application_all_in_one.xml  simple_roi_application_same_host.xml  simple_roi_application_same_host_adom.xml  simple_roi_reader.xml  simple_roi_reader_adom.xml  simple_roi_writer.xml  simple_roi_writer_adom.xml
examples/ros2/simpleROS2Application/src/roi_reader/: CMakeLists.txt  package.xml
examples/ros2/simpleROS2Application/src/roi_reader/src/: simple_roi_reader_adom.cpp  simple_roi_reader_dds.cpp
include/adom/: application_interface.hpp  directory.hpp  log.hpp  opencv_helper.h  parameters.h  protocol.hpp  safe_queue.hpp  socket_endpoint.hpp  translation.h
scripts/: caching_node.py  init_ptpd.py
src/cpp/adom/: application_interface.cpp  directory.cpp  log.cpp  protocol.cpp
