<?xml version="1.0"?>
<package format="3">
  <name>launcher</name>
  <version>0.0.0</version>
  <description>Launch package for starting multiple nodes from different packages</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>
    <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>